k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kayenta-demo
  namespace: poc
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: metrics
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: http
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: kayenta-demo
  sessionAffinity: None
  type: ClusterIP
