k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kayenta-demo
  namespace: poc
spec:
  rules:
  - host: kayenta-demo.difranca.top
    http:
      paths:
      - pathType: Prefix
        path: /metrics
        backend:
          service:
            name: kayenta-demo
            port:
              number: 8080
      - pathType: Prefix
        path: /
        backend:
          service:
            name: kayenta-demo
            port:
              number: 5000
